--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,9 @@ ipykernel = "*"
 python-dotenv = "*"
 transformers = "*"
 llama-index-embeddings-huggingface = "*"
+socks = "*"
+pysocks = "*"
+llama-index-postprocessor-colbert-rerank = "*"
 
 [dev-packages]
 tqdm = "*"
