--- a/.env_template
+++ b/.env_template
@@ -1,2 +1,6 @@
 OPENAI_API_KEY = 'YOUR_OPENAI_API_KEY'
 ANTHROPIC_API_KEY = 'YOUR_ANTHROPIC_API_KEY'
+
+Weaviate_API_KEY = "YOUR_Weaviate_API_KEY"
+Weaviate_API_KEY_READ = "YOUR_Weaviate_API_KEY_READ"
+Weaviate_URL = "https://sgf9..."
